--- a/recipe-gen.html
+++ b/recipe-gen.html
@@ -19,7 +19,7 @@
 <body>
 
     <div class="container">
-        <h1>Recipe Generator</h1>
+        <h1>Chef65</h1>
         <div class="recipe_input">
             <label for="food_class">Enter Recipe</label>
             <input type="text" id="food_class"
