--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastify-js/1.12.0/toastify.min.css"
         integrity="sha512-k+xZuzf4IaGQK9sSDjaNyrfwgxBfoF++7u6Q0ZVUs2rDczx9doNZkYXyyQbnJQcMR4o+IjvAcIj69hHxiOZEig=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./style.css">
 
 </head>
 
@@ -33,8 +33,8 @@
     </div>
 
 
-    <script src="./js/toastify.js"></script>
-    <script src="./js/script.js"></script>
+    <script src="./toastify.js"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
